--- a/build.xml
+++ b/build.xml
@@ -96,6 +96,7 @@ with the address of the instance to test (add to the command line
                showoutput="yes"
                failureproperty="testing.failed">
             <classpath refid="project.class.path"/>
+            <formatter type="xml"/>
             <sysproperty key="webdriver.chrome.driver"
                          value="${webdriver.chrome.driver}"/>
             <sysproperty key="jitsi-meet.instance.url"
@@ -105,7 +106,8 @@ with the address of the instance to test (add to the command line
             <test name="org.jitsi.meet.test.TestsRunner"
                   todir="${test.reports.dir}"/>
             <!-- this is xml formatter -->
-            <formatter classname="org.jitsi.meet.test.FailureListener"/>
+            <formatter classname="org.jitsi.meet.test.FailureListener"
+                usefile="false"/>
         </junit>
 
         <junitreport todir="${test.reports.dir}">
