Adds option to start IE tests.

--- a/build.xml
+++ b/build.xml
@@ -75,6 +75,10 @@
                value="${lib.native.path}/chromedriver.exe">
             <isset property="is.running.windows"/>
     </condition>
+    <condition property="webdriver.ie.driver"
+               value="${lib.native.path}/IEDriverServer.exe">
+            <isset property="is.running.windows"/>
+    </condition>
 
     <property environment="env"/>
 
@@ -109,6 +113,20 @@ with the address of the instance to test (add to the command line
             <formatter type="xml"/>
             <sysproperty key="webdriver.chrome.driver"
                          value="${webdriver.chrome.driver}"/>
+            <!--
+            For IE 11 only, you will need to set a registry entry on the target computer so that the driver can
+            maintain a connection to the instance of Internet Explorer it creates. For 32-bit Windows installations,
+            the key you must examine in the registry editor is
+            HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Internet Explorer\Main\FeatureControl\FEATURE_BFCACHE.
+            For 64-bit Windows installations, the key is
+            HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Microsoft\Internet Explorer\Main\FeatureControl\FEATURE_BFCACHE.
+            Please note that the FEATURE_BFCACHE subkey may or may not be present, and should be created if it is
+            not present. Important: Inside this key, create a DWORD value named iexplore.exe with the value of 0.
+
+            Also add the tested site to trusted sites in internet options.
+            -->
+            <sysproperty key="webdriver.ie.driver"
+                         value="${webdriver.ie.driver}"/>
             <syspropertyset refid="test.sysproperties"/>
 
             <!-- Comma separated list of tests to run relative to the
