Adds stamp-video.sh script that adds QR code to an input video.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ hs_err_pid*
 
 test-reports
 classes
+
+# PSNR test sequences and output files
+resources/psnr/output/
+resources/psnr/test_sequences/
