--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 *.ear
 *.iws
 
+# IntelliJ project files
+*.iml
+*.ipr
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
