--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
