--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # IntelliJ project files
 *.iml
 *.ipr
+.idea
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
