--- a/src/test/resources/settings.properties.template
+++ b/src/test/resources/settings.properties.template
@@ -2,9 +2,30 @@
 #mobile.participant=android
 #mobile.participant=ios
 
-# caps that are supported
-#mobile.caps.deviceName=Android
-#mobile.caps.app=~/Desktop/jitsi-meet-react-latest.apk
+# When running locally you may want to reinstall the app every time to reproduce
+# all permissions dialogs (if the permissions have been accepted).
+#mobile.reinstallApp=false
 
-# custom screenshot folder
+# Android
+mobile.android.bundleId=org.jitsi.meet
+mobile.android.caps.app=~/Desktop/jitsi-meet-react-latest.apk
+mobile.android.caps.appWaitActivity=com.android.settings.Settings$AppDrawOverlaySettingsActivity,.MainActivity
+mobile.android.caps.appWaitPackage=com.android.settings,org.jitsi.meet
+mobile.android.caps.deviceName=Android
+
+# iOS
+mobile.ios.bundleId=org.jitsi.JitsiMeet.ios
+# The .ipa file must be signed
+mobile.ios.caps.app=~/Desktop/jitsi-meet-react-latest.ipa
+mobile.ios.caps.automationName=XCUITest
+mobile.ios.caps.deviceName=iPhone
+# Uncomment to get more verbose output from XCode
+#mobile.ios.caps.showXcodeLog=true
+# This full device id is required for real device testing
+mobile.ios.caps.udid=13234fd54654662e4aa2341d23474affd324d2
+
+# Appium
+#appium.server.address=127.0.0.1
+#appium.server.port=4723
+# custom screenshot folder - by default goes to java.io.tmpdir
 #appium.screenshots.dir=test-reports/screenshots
