Workarounds a problem with parallel execution and quitting drivers.
Workarounds a problem where methods and after class run in different threads, which results filling the whole grid at some point.
https://github.com/cbeust/testng/issues/1185
Also changes the test report to be prettier.

--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
                         </property>
                         <property>
                             <name>parallel</name>
-                            <value>instances</value>
+                            <value>tests</value>
                         </property>
                         <property>
                             <name>threadcount</name>
