ref(MobileParticipantBuilder): clean up mobile properties
Provide default values and create separate builders for Android/iOS, so that it's easy to see
OS specific stuff without mixing everything in one class.

--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <!-- not used at the moment -->
 
         <!-- mobile -->
-        <mobile.participant1/>
+        <mobile.participant/>
         <mobile.caps.deviceName/>
         <mobile.caps.app/>
 
