--- a/src/test/resources/mobile/settings.properties
+++ b/src/test/resources/mobile/settings.properties
@@ -1,29 +1,24 @@
-mobile.participant1Prefix=${mobile.participant1}
+# Use -Dmobile.participant=mobile.android or -Dmobile.participant=mobile.ios
+# to package a test archive for Android or iOS tests.
+mobileTest.participant1Prefix=${mobile.participant}
 
 # Appium FIXME figure out with prefix
 #appium.server.address=127.0.0.1
 #appium.server.port=4723
 
-# FIXME: remove redundancy, assume defaults in the app
 # Android
 mobile.android.type=android
-mobile.android.bundleId=org.jitsi.meet
 # path to apk file
-mobile.android.caps.app=${mobile.caps.app}
-mobile.android.caps.appWaitPackage=com.android.settings,org.jitsi.meet
-mobile.android.caps.appWaitActivity=com.android.settings.Settings$AppDrawOverlaySettingsActivity,.MainActivity
-mobile.android.caps.deviceName=${mobile.caps.deviceName}
-mobile.android.caps.platformName=android
+mobile.android.caps.app=${mobile.app}
+mobile.android.caps.deviceName=${mobile.deviceName}
 
 # When running locally you may want to reinstall the app every time to reproduce
 # all permissions dialogs (if the permissions have been accepted).
-#mobile.android.reinstallApp=false
+#android.reinstallApp=false
 
 # iOS
 mobile.ios.type=ios
-mobile.ios.bundleId=org.jitsi.JitsiMeet.ios
-mobile.ios.caps.deviceName=iPhone
-mobile.ios.caps.app=org.jitsi.JitsiMeet.ios
-mobile.ios.caps.automationName=XCUITest
-mobile.ios.caps.platformName=ios
+mobile.ios.caps.app=${mobile.app}
+mobile.ios.caps.deviceName=${mobile.deviceName}
 
+# Check ParticipantBuilder and it's subclasses for more configuration properties
