--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
                         <includes>
                             <include>testng.xml</include>
                             <include>settings.properties</include>
+                            <include>iframeAPITest.html</include>
                         </includes>
                         <filtering>true</filtering>
                     </testResource>
